--- a/main.css
+++ b/main.css
@@ -1,21 +1,31 @@
 main {
     padding: 1rem;
     color: var(--dark-color);
-    margin-top: 2rem;
+    margin-top: 3.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 main .title {
     font-size: 4rem;
     text-align: center;
     color: var(--dark-color);
-    line-height: 60px;
-    margin-bottom: 1.7rem;
+    line-height: 3.75rem;
+    margin-bottom: 2rem;
 }
 
-
+.circle:first-child{
+    background: var(--dark-color);
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    position: absolute;
+    top: -200px;
+    left: -160px;
+    z-index: -1;
+}
 
 .title span {
     color: var(--red-color);
@@ -24,11 +34,72 @@ main .title {
 .subtitle {
     text-align: center;
     font-weight: 400;
-    font-size: 1rem;
+    font-size: 0.880rem;
+}
+
+.btn-call {
+    font-weight: bold;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.300);
+    margin-top: 3.5rem;
+    background: var(--red-color);
+    color: var(--light-color);
+    padding: 0.6rem 2.5rem;
+    border-radius: 12px;
 }
 
 /* hero */
 
+.hero {
+    margin-top: 3rem;
+    width: 100%;
+    position: relative;
+}
+
+.hero .circle-img {
+    position: absolute;
+    left: 220px;
+    top: -45px;
+}
+
 .hero-img {
-    height: 500px;
+    height: 430px;
+    position: absolute;
+    right: -16px;
+    top: 7px;
+}
+
+.hero-title {
+    font-weight: bold;
+    margin-top: 3rem;
+    margin-left: 1.670rem;
+    font-size: 3.1rem;
+    text-align: left;
+    width: 50px;
+    line-height: 60px;
+    margin-bottom: 2.4rem;
+}
+
+.hero-title span {
+    color: var(--red-color);
+}
+
+.hero .btn-call {
+    z-index: -1;
+    position: relative;
+    margin-left: 1.670rem;
+    font-size: 1rem;
+    padding-block: 0.5rem;
+}
+
+.hero .btn-call span {
+    font-size: 1rem;
+    text-align: center;
+    margin-left: 10px;
+}
+
+.hero .btn-call i {
+    font-size: 1.3rem;
+    position: absolute;
+    left: 18px;
+    top: 2px;
 }
