--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ main .title {
 .subtitle {
     text-align: center;
     font-weight: 400;
-    font-size: 0.880rem;
+    font-size: clamp(10px, 3vw, 24px)
 }
 
 .btn-call {
@@ -89,7 +89,9 @@ main .title {
 
 .hero .btn-call {
     z-index: -1;
-    position: relative;
+    position: absolute;
+    top: 16.5rem;
+    padding-right: 10rem;
     margin-left: 1.670rem;
     font-size: 1rem;
     padding-block: 0.5rem;
